--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
