--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
     "express": "^4.18.2",
+    "netlify-cli": "^15.6.0",
+    "netlify-lambda": "^2.0.16",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "rxjs": "~7.8.0",
+    "serverless-http": "^3.2.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -35,6 +39,8 @@
     "@angular/cli": "~16.0.2",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.8",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
